--- a/css/produtos.css
+++ b/css/produtos.css
@@ -165,13 +165,13 @@ nav li {
 .input-group {
   display: flex;
   align-items: center;
-  background-color: #e1dcdc;
+  background-color: #ffffff;
   padding: 10px;
   border-radius: 54px;
   flex: 1;
   gap: 8px;
-  width: 1100px;
-  max-width: 600px;
+  width: 900px;
+  max-width: 1000px;
   margin: 0 auto;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -208,7 +208,32 @@ nav li {
 .item-description {
   color: #000000;
 }
+#menuTodos {
+  display: none;
+  position: absolute;
+  top: 60px; 
+  left: 0;
+  background-color: #fafafa;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 10px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
 
+#menuTodos p {
+  margin: 0;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+#menuTodos p:hover {
+  background-color: #eaeaea;
+}
+
+.menu-visible {
+  display: block; 
+}
 /* FIM DA BARRA DE PESQUISA */
 
 .item {
@@ -429,8 +454,81 @@ footer div a {
 }
 
 footer h1{
-    color: #091290;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+  color:#4f5afc;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+
+.menu-hamburguer {
+  display: none; 
+}
+
+.navburguer {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 50px;
+  right: 0;
+  background: #fafafa;
+  border-radius: 8px;
+  width: 200px;
+  display: none; 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.navburguer li {
+  border-bottom: 1px solid #ddd;
+}
+
+.navburguer li:last-child {
+  border-bottom: none;
+}
+
+.navburguer a {
+  display: block;
+  padding: 10px 15px;
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+}
+
+.navburguer a:hover {
+  background-color: #f0f0f0;
+}
+
+.navburguer.active {
+  display: block; 
+}
+
+.hamburguer {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 20px;
+}
+
+.hamburguer span {
+  display: block;
+  height: 4px;
+  background-color: #333;
+  border-radius: 10px;
+  transition: 0.3s ease;
+}
+
+.hamburguer.open span:nth-child(1) {
+  transform: translateY(8px) rotate(45deg);
+}
+
+.hamburguer.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburguer.open span:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg);
 }
 
 
